[package]
name = "sampled-dmc"
version = "0.1.2"
authors = ["aleok <aleok.inf@gmail.com>"]
license = "MIT"
description = "An implementation of Dual Marching Cubes (DMC) for already sampled data"
repository = "https://github.com/alexdevteam/dmc"
keywords = ["graphics", "mesh", "marching-cubes", "isosurface", "octree"]
edition = "2018"

[dependencies]
cgmath = "^0.18"
bitflags = "^1.2"
dashmap = "^4.0"
rayon = "^1.5"
ahash = "^0.7"

[lib]
name = "dmc"
path = "src/lib.rs"